@@ -99,6 +99,7 @@ SKIP: {
                         server => 'none',
                         installer => [ qw(MakeMaker ModuleBuildTiny) ],
                         'RewriteVersion::Transitional.skip_version_provider' => 1,
+                        'Test::MinimumVersion.max_target_perl' => '5.008',
                       },
                     ],
                 ),
